Added License to file

--- a/SCSS/WapoursGlobalThings.theme.scss
+++ b/SCSS/WapoursGlobalThings.theme.scss
@@ -1,4 +1,7 @@
 // Imports
 @use "ThemeInfo";
+@use "License";
 @use "UserBadgesFullscreenUserModal";
 @use "UserBadgesPopoutUserModal";
+
+// Please read the License before using stuff!
