Fixed Badge Background lacking Transparency

--- a/SCSS/_UserBadgesFullscreenUserModal.scss
+++ b/SCSS/_UserBadgesFullscreenUserModal.scss
@@ -10,7 +10,7 @@ $Wapour-badge-size: 18px;
 /* Make default colour for Banner the current Client Colour */
 .fullscreenOnMobile-1bD22y[data-user-id="142795541833580544"] .banner-2QYc2d
 {
-    background-color: var(--background-primary)!important;
+    background-color: transparent!important;
 }
 
 /* Banner Default to Client Base Colour */
