--- a/SCSS/_UserBadgesPopoutUserModal.scss
+++ b/SCSS/_UserBadgesPopoutUserModal.scss
@@ -22,7 +22,7 @@ $Wapour-badge-size: 18px;
 /* Make default colour for Banner the current Client Colour */
 .userPopout-xaxa6l[data-user-id="142795541833580544"] .banner-2QYc2d
 {
-    background-color: var(--background-primary)!important;
+    background-color: transparent!important;
 }
 
 /*----------------------------------------------------------------------------------*/
