--- a/SCSS/_Helpers.scss
+++ b/SCSS/_Helpers.scss
@@ -1,8 +1,13 @@
 // Global Variables
 $Wapour-pink: #ff007e;
+
+// Badge Variables
 $Wapour-badge: url('https://steamcommunity-a.akamaihd.net/economy/emoticonlarge/b1');
+
+// Animation Variables
 $bubble-popin-time: 0.1s;
 $bubble-popout-time: 0.1s;
+
 
 // /* Root Variables */
 // :root
