--- a/SCSS/_Helpers.scss
+++ b/SCSS/_Helpers.scss
@@ -28,7 +28,12 @@ $bubble-popout-time: 0.1s;
     100% { opacity: 1; transform: scale(1); }
 }
 
-@keyframes popin-modal
+@keyframes popin-modal-left
+{
+    0% { opacity: 0; transform-origin: right; transform: scale(0.5, 1); -webkit-transform: translate3d(-10px,0,0); }
+    100% { opacity: 1; transform: scale(1, 1); }
+}
+@keyframes popin-modal-right
 {
     0% { opacity: 0; transform-origin: right; transform: scale(0.5, 1); -webkit-transform: translate3d(10px,0,0); }
     100% { opacity: 1; transform: scale(1, 1); }
