Reformatted stuff to be neater

--- a/SCSS/WapoursGlobalThings.live.theme.scss
+++ b/SCSS/WapoursGlobalThings.live.theme.scss
@@ -1,6 +1,7 @@
 // Imports
-@use "ThemeInfo";
+@use "BD-ThemeInfo";
 @use "License";
+@use "ThemeArea";
 @use "UserBadgesFullscreenUserModal";
 @use "UserBadgesPopoutUserModal";
 
