--- a/SCSS/_ThemeArea.scss
+++ b/SCSS/_ThemeArea.scss
@@ -1,17 +1,5 @@
-/**
- * @name Wapours Global Things Live
- * @version X.X.X
- * @author Wapour Vave#1388⠀⠀⠀⠀⠀⠀⠀⠀⠀Enable Me Please! ->
- * @authorLink https://github.com/WapourVave
- * @description Global Theme for reused elements.
- * @website https://github.com/WapourVave
- * @source https://github.com/WapourVave/discord-global-things
-*/
-
 /*-----------------------------------------
--------------------------------------------
-            Global Reusable CSS
--------------------------------------------
+	Theme Area
 -----------------------------------------*/
 
 // Variables
@@ -22,12 +10,8 @@ $icon-position: 10px 12px;
 $icon-unicode: "🌍";
 $icon-unicode-font-size: 16px;
 
-$version: "v1.0.5 ";
+$version: "v1.1.0 ";
 $author: "Wapour Vave#1388⠀⠀⠀⠀⠀⠀⠀⠀⠀Thank You Friend! 🙂";
-
-/*-----------------------------------------
-				Themes Area
------------------------------------------*/
 
 /* Hide default BD Theme Icon */
 [id='Wapours Global Things Live-card'] .bd-addon-header .bd-icon path
