--- a/CSS/WapoursGlobalThings.live.theme.css
+++ b/CSS/WapoursGlobalThings.live.theme.css
@@ -36,7 +36,7 @@
 * SOFTWARE.
 */
 /*-----------------------------------------
-				Themes Area
+	Theme Area
 -----------------------------------------*/
 /* Hide default BD Theme Icon */
 [id="Wapours Global Things Live-card"] .bd-addon-header .bd-icon path {
@@ -68,7 +68,7 @@
 /* True AMOLED Version */
 [id="Wapours Global Things Live-card"] .bd-version:after {
   font-size: 14px;
-  content: "v1.0.5 ";
+  content: "v1.1.1 ";
 }
 
 /* True AMOLED Author */
@@ -76,6 +76,15 @@
 [id="Wapours Global Things Live-card"] .bd-title .bd-link:after {
   font-size: 14px;
   content: "Wapour Vave#1388⠀⠀⠀⠀⠀⠀⠀⠀⠀Thank You Friend! 🙂";
+}
+
+/*-----------------------------------------
+	Helpers
+-----------------------------------------*/
+/* Animation Variables */
+:root {
+  --bubble-popin-time: 0.1s;
+  --bubble-popout-time: 0.1s;
 }
 
 /* Global Animations */
@@ -100,7 +109,6 @@
 @keyframes popin-modal-left {
   0% {
     opacity: 0;
-    transform-origin: right;
     transform: scale(0.5, 1);
     -webkit-transform: translate3d(-10px, 0, 0);
   }
@@ -112,7 +120,6 @@
 @keyframes popin-modal-right {
   0% {
     opacity: 0;
-    transform-origin: right;
     transform: scale(0.5, 1);
     -webkit-transform: translate3d(10px, 0, 0);
   }
@@ -228,7 +235,7 @@
 /*----------------------------------------------------------------------------------*/
 /* Badge Info Bubble */
 .fullscreenOnMobile-1bD22y[data-user-id="142795541833580544"] .profileBanner-33-uE1:before {
-  -webkit-animation: popout-bubble 0.1s;
+  -webkit-animation: popout-bubble var(--bubble-popout-time);
   content: "";
   width: 0px;
   color: var(--text-normal);
@@ -248,7 +255,7 @@
 
 /* Bubble Hover */
 .fullscreenOnMobile-1bD22y[data-user-id="142795541833580544"] .profileBanner-33-uE1:hover:before {
-  -webkit-animation: popin-bubble 0.1s;
+  -webkit-animation: popin-bubble var(--bubble-popin-time);
   content: "Theme Developer";
   width: 105px;
   padding: 9px;
@@ -259,7 +266,7 @@
 
 /* Badge Info Triangle */
 .fullscreenOnMobile-1bD22y[data-user-id="142795541833580544"] .profileBanner-33-uE1:after {
-  -webkit-animation: popout-triangle 0.1s;
+  -webkit-animation: popout-triangle var(--bubble-popout-time);
   content: "";
   border-width: 0px 0px 0 0px;
   border-style: solid;
@@ -345,7 +352,7 @@
 /*----------------------------------------------------------------------------------*/
 /* Badge Info Bubble */
 .userPopout-xaxa6l[data-user-id="142795541833580544"] .popoutBanner-19WKGg:before {
-  -webkit-animation: popout-bubble 0.1s;
+  -webkit-animation: popout-bubble var(--bubble-popout-time);
   content: "";
   width: 0px;
   color: var(--text-normal);
@@ -365,7 +372,7 @@
 
 /* Bubble Hover */
 .userPopout-xaxa6l[data-user-id="142795541833580544"] .popoutBanner-19WKGg:hover:before {
-  -webkit-animation: popin-bubble 0.1s;
+  -webkit-animation: popin-bubble var(--bubble-popin-time);
   content: "Theme Developer";
   width: 105px;
   padding: 9px;
@@ -376,7 +383,7 @@
 
 /* Badge Info Triangle */
 .userPopout-xaxa6l[data-user-id="142795541833580544"] .popoutBanner-19WKGg:after {
-  -webkit-animation: popout-triangle 0.1s;
+  -webkit-animation: popout-triangle var(--bubble-popout-time);
   content: "";
   border-width: 0px 0px 0 0px;
   border-style: solid;
