--- a/SCSS/_UserBadgesFullscreenUserModal.scss
+++ b/SCSS/_UserBadgesFullscreenUserModal.scss
@@ -3,7 +3,7 @@
 -----------------------------------------*/
 
 // Imports
-@use "Helpers" as *;
+@use "Animations" as *;
 
 $Wapour-badge-size: 18px;
 
