Added new files + Made Popout Badge Pos Global

--- a/SCSS/_Animations.scss
+++ b/SCSS/_Animations.scss
@@ -1,25 +1,10 @@
 /*-----------------------------------------
-	Helpers
+	Animations
 -----------------------------------------*/
 
-// Global Variables
-$Wapour-pink: #ff007e;
-
-// Badge Variables
-$Wapour-badge: url('https://steamcommunity-a.akamaihd.net/economy/emoticonlarge/b1');
-
 /* Animation Variables */
-:root
-{
-    --bubble-popin-time: 0.1s;
-    --bubble-popout-time: 0.1s;
-}
-
-// /* Root Variables */
-// :root
-// {
-
-// }
+$bubble-popin-time: 0.1s;
+$bubble-popout-time: 0.1s;
 
 /* Global Animations */
 @keyframes rotate
