--- a/SCSS/_ThemeArea.scss
+++ b/SCSS/_ThemeArea.scss
@@ -10,8 +10,8 @@ $icon-position: 10px 12px;
 $icon-unicode: "🌍";
 $icon-unicode-font-size: 16px;
 
-$version: "v1.1.3 ";
-$author: "Wapour Vave#1388⠀⠀⠀⠀⠀⠀⠀⠀⠀Thank You Friend! 🙂";
+$version: "v1.1.6 ";
+$author: "Wapour Vave#1388⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀Thank You Friend! 🙂";
 
 /* Hide default BD Theme Icon */
 [id='Wapours Global Things Live-card'] .bd-addon-header .bd-icon path
