Removed New Global Vars

--- a/SCSS/_GlobalVars.scss
+++ b/SCSS/_GlobalVars.scss
@@ -7,9 +7,8 @@ $Wapour-pink: #ff007e;
 // Badge Variables
 $Wapour-badge: url('https://steamcommunity-a.akamaihd.net/economy/emoticonlarge/b1');
 
-/* Root Variables */
-:root
-{
-	--WapoursGlobalThings-popout-small-badge-top: 78px;
-	--WapoursGlobalThings-popout-small-badge-left: 218px;
-}
+// /* Root Variables */
+// :root
+// {
+
+// }
