--- a/SCSS/_UserBadgesSmallUserPopout.scss
+++ b/SCSS/_UserBadgesSmallUserPopout.scss
@@ -58,13 +58,13 @@ $Wapour-badge-size: 18px;
     position: absolute;
     z-index: 1;
 
-    top: var(--WapoursGlobalThings-popout-small-badg-top);
+    top: 78px;
 
     // With Nitro:
     // left: 170px;
 
     // Without Nitro
-    left: var(--WapoursGlobalThings-popout-small-badg-left);
+    left: 218px;
 
     // Position Check
     // opacity: 0.5;
