Changed author spacing by 1 character

--- a/CSS/WapoursGlobalThings.live.theme.css
+++ b/CSS/WapoursGlobalThings.live.theme.css
@@ -75,7 +75,7 @@
 [id="Wapours Global Things Live-card"] .bd-author:after,
 [id="Wapours Global Things Live-card"] .bd-title .bd-link:after {
   font-size: 14px;
-  content: "Wapour Vave#1388⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀Thank You Friend! 🙂";
+  content: "Wapour Vave#1388⠀⠀⠀⠀⠀⠀⠀⠀⠀Thank You Friend! 🙂";
 }
 
 /*-----------------------------------------
