--- a/SCSS/_ThemeArea.scss
+++ b/SCSS/_ThemeArea.scss
@@ -11,7 +11,7 @@ $icon-unicode: "🌍";
 $icon-unicode-font-size: 16px;
 
 $version: "v1.1.7 ";
-$author: "Wapour Vave#1388⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀Thank You Friend! 🙂";
+$author: "Wapour Vave#1388⠀⠀⠀⠀⠀⠀⠀⠀⠀Thank You Friend! 🙂";
 
 /* Hide default BD Theme Icon */
 [id='Wapours Global Things Live-card'] .bd-addon-header .bd-icon path
