--- a/SCSS/_UserBadgesSmallUserPopout.scss
+++ b/SCSS/_UserBadgesSmallUserPopout.scss
@@ -127,6 +127,7 @@ $Wapour-badge-size: 18px;
 	left: -50px; 
 	bottom: 44px;
 
+    pointer-events: none;
 	opacity: 0;
 }
 
@@ -159,6 +160,8 @@ $Wapour-badge-size: 18px;
     position: absolute;
     bottom: 40px;
     left: -2px;
+
+    pointer-events: none;
 }
 
 /* Triangle Hover */
